gate_output.log
=== Gate Check: IMPLEMENT-CODE_REVIEW ===
Task: SPEC-006
Worktree: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006


--- Gate: Implementation code exists ---
✓ Implementation code exists: PASS
Changed files:
  src/learning_memory_server/embedding/__init__.py
  src/learning_memory_server/embedding/minilm.py
  src/learning_memory_server/embedding/registry.py
  src/learning_memory_server/indexers/indexer.py
  src/learning_memory_server/server/config.py
  src/learning_memory_server/server/main.py
  src/learning_memory_server/server/tools/__init__.py
  src/learning_memory_server/server/tools/code.py
  src/learning_memory_server/server/tools/memory.py
  src/learning_memory_server/storage/__init__.py

--- Gate: Tests pass ---
=== Running Tests ===
Directory: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006
Task ID: SPEC-006

Detected: Python (pytest)

Syncing dependencies with uv...

Running tests...
============================= test session starts ==============================
platform darwin -- Python 3.12.12, pytest-9.0.1, pluggy-1.6.0 -- /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/.venv/bin/python
cachedir: .pytest_cache
hypothesis profile 'default'
rootdir: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006
configfile: pyproject.toml
testpaths: tests
plugins: mock-3.15.1, hypothesis-6.148.6, anyio-4.12.0, asyncio-1.3.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collecting ... collected 330 items / 1 error

==================================== ERRORS ====================================
__________________ ERROR collecting tests/server/test_main.py __________________
ImportError while importing test module '/Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/tests/server/test_main.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
../../../../../.local/share/uv/python/cpython-3.12.12-macos-aarch64-none/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests/server/test_main.py:7: in <module>
    from learning_memory_server.server.main import create_embedding_service, create_server
E   ImportError: cannot import name 'create_embedding_service' from 'learning_memory_server.server.main' (/Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/src/learning_memory_server/server/main.py)
=============================== warnings summary ===============================
.venv/lib/python3.12/site-packages/hdbscan/plots.py:448
  /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/.venv/lib/python3.12/site-packages/hdbscan/plots.py:448: SyntaxWarning: invalid escape sequence '\l'
    axis.set_ylabel('$\lambda$ value')

.venv/lib/python3.12/site-packages/hdbscan/robust_single_linkage_.py:175
  /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/.venv/lib/python3.12/site-packages/hdbscan/robust_single_linkage_.py:175: SyntaxWarning: invalid escape sequence '\{'
    $max \{ core_k(a), core_k(b), 1/\alpha d(a,b) \}$.

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR tests/server/test_main.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!!
======================== 2 warnings, 1 error in 10.47s =========================

=== Collection Errors Detected ===
E   ImportError: cannot import name 'create_embedding_service' from 'learning_memory_server.server.main' (/Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006/src/learning_memory_server/server/main.py)

FAIL: Test collection errors (import/syntax failures)
Fix the import errors before proceeding.
Test results logged to database
✗ Tests pass: FAIL

--- Gate: Linter clean ---
=== Running Linter ===
Directory: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006

Detected: Python
Running: ruff check
F401 [*] `typing.Any` imported but unused
 --> src/learning_memory_server/embedding/registry.py:3:20
  |
1 | """Embedding service registry for dual embedding models."""
2 |
3 | from typing import Any
  |                    ^^^
4 |
5 | import structlog
  |
help: Remove unused import: `typing.Any`

E501 Line too long (89 > 88)
   --> src/learning_memory_server/embedding/registry.py:100:89
    |
 98 |     """
 99 |     if _registry is None:
100 |         raise RuntimeError("Registry not initialized. Call initialize_registry() first.")
    |                                                                                         ^
101 |     return _registry.get_code_embedder()
    |

E501 Line too long (89 > 88)
   --> src/learning_memory_server/embedding/registry.py:114:89
    |
112 |     """
113 |     if _registry is None:
114 |         raise RuntimeError("Registry not initialized. Call initialize_registry() first.")
    |                                                                                         ^
115 |     return _registry.get_semantic_embedder()
    |

I001 [*] Import block is un-sorted or un-formatted
  --> src/learning_memory_server/server/main.py:97:5
   |
95 |         shutdown hangs.
96 |     """
97 |     from learning_memory_server.embedding import get_code_embedder, get_semantic_embedder
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
98 |
99 |     server = Server("learning-memory-server")
   |
help: Organize imports

E501 Line too long (89 > 88)
  --> src/learning_memory_server/server/main.py:97:89
   |
95 |         shutdown hangs.
96 |     """
97 |     from learning_memory_server.embedding import get_code_embedder, get_semantic_embedder
   |                                                                                         ^
98 |
99 |     server = Server("learning-memory-server")
   |

Found 5 errors.
[*] 2 fixable with the `--fix` option.

FAIL: Linter errors found
✗ Linter clean: FAIL

--- Gate: Type check clean ---
=== Running Type Checker ===
Directory: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006

Detected: Python
Running: mypy --strict (via uv run)
src/learning_memory_server/storage/qdrant.py:311: error: Item "dict[str, VectorParams]" of "VectorParams | dict[str, VectorParams] | None" has no attribute "size"  [union-attr]
src/learning_memory_server/storage/qdrant.py:311: error: Item "None" of "VectorParams | dict[str, VectorParams] | None" has no attribute "size"  [union-attr]
src/learning_memory_server/storage/qdrant.py:312: error: Argument "vector_count" to "CollectionInfo" has incompatible type "int | None"; expected "int"  [arg-type]
src/learning_memory_server/embedding/minilm.py:58: error: Incompatible return value type (got "int | None", expected "int")  [return-value]
Found 4 errors in 2 files (checked 61 source files)

FAIL: Type errors found
✗ Type check clean: FAIL

--- Gate: No untracked TODOs ---
=== Checking for Untracked TODOs ===
Directory: /Users/elliotmilco/Documents/GitHub/clams/.worktrees/SPEC-006

No TODO comments found

PASS: No untracked TODOs
✓ No untracked TODOs: PASS

==========================================
GATE RESULT: FAIL

Fix the failing gates before proceeding.
